# distributed-relaxation

./: CMakeLists.txt  README.md
CMakeModules/: FindCheck.cmake
src/: CMakeLists.txt  image.c  image.h  main.c  matrix.c  matrix.h  thread.c  thread.h
tests/: CMakeLists.txt  check_image.c  check_matrix.c  check_thread.c
